@@ -381,7 +381,7 @@
   <td><br></td>
   <td>
     <p>
-      <li>Well documented in the NuttX <a href="NuttXUserGuide.html">User Guide</a>.</li>
+      <li>Well documented in the NuttX <a href="NuttxUserGuide.html">User Guide</a>.</li>
     </p>
 </tr>
 
@@ -3833,7 +3833,7 @@ pascal-3.0 2011-05-15 Gregory Nutt &lt;gnutt@nuttx.org&gt;
 </tr>
 <tr>
   <td valign="top" width="22"><img height="20" width="20" src="favicon.ico"></td>
-  <td><a href="NuttXUserGuide.html">User Guide</a></td>
+  <td><a href="NuttxUserGuide.html">User Guide</a></td>
 </tr>
 <tr>
   <td valign="top" width="22"><img height="20" width="20" src="favicon.ico"></td>
