@@ -72,13 +72,10 @@ CONFIG_ARCH_MIPS32=y
 # MIPS32 Configuration Options
 #
 # CONFIG_MIPS32_TOOLCHAIN_GNU_ELF is not set
-# CONFIG_MIPS32_TOOLCHAIN_MICROCHIPL is not set
-# CONFIG_MIPS32_TOOLCHAIN_MICROCHIPL_LITE is not set
 # CONFIG_MIPS32_TOOLCHAIN_MICROCHIPW is not set
 CONFIG_MIPS32_TOOLCHAIN_MICROCHIPW_LITE=y
-# CONFIG_MIPS32_TOOLCHAIN_MICROCHIPOPENL is not set
 # CONFIG_MIPS32_TOOLCHAIN_PINGUINOW is not set
-# CONFIG_MIPS32_TOOLCHAIN_PINGUINOL is not set
+# CONFIG_MIPS32_FRAMEPOINTER is not set
 
 #
 # PIC32MX Configuration Options
@@ -245,7 +242,7 @@ CONFIG_ARCH_VECNOTIRQ=y
 CONFIG_ARCH_IRQPRIO=y
 # CONFIG_CUSTOM_STACK is not set
 # CONFIG_ADDRENV is not set
-# CONFIG_ARCH_HAVE_VFORK is not set
+CONFIG_ARCH_HAVE_VFORK=y
 CONFIG_ARCH_STACKDUMP=y
 # CONFIG_ENDIAN_BIG is not set
 CONFIG_ARCH_HAVE_RAMFUNCS=y
@@ -308,7 +305,7 @@ CONFIG_DEV_CONSOLE=y
 # CONFIG_FDCLONE_STDIO is not set
 CONFIG_SDCLONE_DISABLE=y
 # CONFIG_SCHED_WORKQUEUE is not set
-# CONFIG_SCHED_WAITPID is not set
+CONFIG_SCHED_WAITPID=y
 # CONFIG_SCHED_ATEXIT is not set
 # CONFIG_SCHED_ONEXIT is not set
 CONFIG_USER_ENTRYPOINT="ostest_main"
